# noted

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  handler.rs
.github/workflows/: build-and-test.yml
migrations/: 20231125102623_initial_database_setup.sql  20240215123616_remove_unique_constraint.sql
src/: handler.rs  main.rs  model.rs  routes.rs
