[package]
name = "noted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.5.0", features = ["cors"] }
dotenv = "0.15"
axum = { version = "0.7.2", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.3", features = [
  "uuid",
  "chrono",
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "migrate",
  "macros",
] }
uuid = { version = "1.4", features = ["v4", "serde"] }
http = "1.0.0"
